<resources>
    <string name="app_name">HelloWorld</string>
    <string name="constraint_layout">constraint_layout</string>
    <string name="login">login</string>
    <string name="button_3">button 3</string>
    <string name="practice">Android practice</string>
    <string name="button_4">button 4</string>
    <string name="button_5">button 5</string>
    <string name="button_6">button 6</string>
    <string name="button_7">button 7</string>
    <string name="button_8">button 8 </string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="Signup_with">Sign Up with E-mail</string>
    <string name="pick_contact">pick_contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_confirmation">是否确定</string>
    <string name="ok">OK</string>
    <string name="fragment">fragment</string>
    <string name="android">Android</string>
    <string name="Java">Java</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="bottom_text">到底了</string>
    <string name="thread">thread</string>
    <string name="handler">handler</string>
    <string name="rxjava">rxjava</string>
    <string name="sp">sp</string>
    <string name="btn_know">知道了</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">欢迎您回来</string>
    <string name="tip">提示信息：\n点击"知道了"不再提示。"</string>
    <string name="compose_tweets">compose_tweets</string>
    <string name="avatar">avatar</string>
    <string name="BigAvatar">BigAvatar</string>
    <string name="back">返回</string>
    <string name="public_friends_circle">发表朋友圈</string>
    <string name="Header_Background">Header Background</string>
    <string name="personal_nick">Weii</string>
    <string name="background">朋友圈背景</string>
    <string name="own_avatar">own pic</string>
    <string name="NowThinking">这一刻的想法...</string>
    <string name="LightGrayWhite">#F4F4F4</string>
    <string name="public_words">发表文字</string>
    <string name="pblic">发表</string>
    <string name="exit_editor">确定要退出编辑吗？</string>
    <string name="exit_and_no_reserve">退出后草稿不会被保存</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="menu">menu</string>
    <string name="like">like</string>
    <string name="like_zh">点赞</string>
    <string name="comment">评论</string>
    <string name="send">send</string>
</resources>
