<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/practice"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                />
            <Button
                android:id="@+id/btnStartAnotherAty"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/button_1"
                android:textAllCaps="false" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_2"
                android:textAllCaps="false" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_3"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_4"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_5"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_6"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_7"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_8"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_9"
                android:textAllCaps="false" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_10"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
